--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,9 +1,10 @@
 @import "colors.css";
+@define-color accent_color @Blue5;
 
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: sans;
-    font-size: 12px;
+    font-size: 9pt;
 }
 
 /* Secondary output */
@@ -14,87 +15,12 @@ window#waybar.secondary-output {
     transition-duration: .5s;
 }
 
+/* Primary output */
 window#waybar {
-    background-color: @Dark5; 
+    background-color: @Dark4; 
     color: @Light1;
     transition-property: background-color;
     transition-duration: .5s;
-}
-
-window#waybar.hidden {
-    opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-
-#workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
-    color: #ffffff;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each workspace name */
-    border: none;
-    border-radius: 0;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-
-#mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#mpd {
-    padding: 0 10px;
-    color: #ffffff;
-}
-
-#window,
-#workspaces {
-    margin: 0 4px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
@@ -107,20 +33,6 @@ window#waybar.chromium {
     margin-right: 0;
 }
 
-#clock {
-    background-color: #64727D;
-}
-
-#battery {
-    background-color: #ffffff;
-    color: #000000;
-}
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
-}
-
 @keyframes blink {
     to {
         background-color: #ffffff;
@@ -128,136 +40,69 @@ window#waybar.chromium {
     }
 }
 
-#battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
 label:focus {
     background-color: #000000;
 }
 
-#cpu {
-    background-color: #2ecc71;
-    color: #000000;
+#window,
+#workspaces {
+    margin: 0 4px;
 }
 
-#memory {
-    background-color: #9b59b6;
+#workspaces button {
+    padding: 0 5px;
+    /* margin: 1px 1px; */
+    /* background-color: transparent; */
+    color: @Light1;
+    /* Use box-shadow instead of border so the text isn't offset */
+    /* box-shadow: inset 0 -3px transparent; */
+    /* Avoid rounded borders under each workspace name */
+    border: none;
+    border-radius: 0px;
 }
 
-#disk {
-    background-color: #964B00;
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+#workspaces button:hover {
+    background: @Green1;
+    color: @Dark4;
+    /* box-shadow: inset 0 -3px @Light1; */
 }
 
-#backlight {
-    background-color: #90b1b1;
+#workspaces button.focused {
+    background-color: @Green5;
+    /* box-shadow: inset 0 -3px @Light1; */
 }
 
-#network {
-    background-color: #2980b9;
+#workspaces button.urgent {
+    background-color: @Red3;
 }
 
-#network.disconnected {
-    background-color: #f53c3c;
+#mode {
+    padding: 0 10px;
+    margin: 4px;
+    color: @Dark4;
+    background-color: @Yellow4;
+    border-radius: 0px;
 }
 
+#clock,
+#cpu,
+#memory,
 #pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
+    padding: 0 10px;
+    color: @Light1;
+    background-color: transparent;
 }
 
 #pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
+    background-color: @Red2;
+    color: @Dark5;
 }
 
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
-}
-
-#temperature {
-    background-color: #f0932b;
-}
-
-#temperature.critical {
-    background-color: #eb4d4b;
-}
-
-#tray {
-    background-color: #2980b9;
-}
-
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-    background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
-}
-
-#mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
-}
-
-#mpd.disconnected {
-    background-color: #f53c3c;
-}
-
-#mpd.stopped {
-    background-color: #90b1b1;
-}
-
-#mpd.paused {
-    background-color: #51a37a;
-}
-
-#language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-}
+/* #custom-split-indicator { */
+/*     padding: 0 10px; */
+/*     margin: 5px; */
+/*     color: @Light1; */
+/*     background-color: @Blue5; */
+/*     border-radius: 3px 10px; */
+/* } */
