--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -4,17 +4,10 @@
 }  
 
 .xfce4-panel .tasklist .toggle {
-    margin: 0px 1px;
-    opacity: 0.90;
-    border-radius: 3px;
+    padding: 0px 5px;
 }
 
 #whiskermenu-button {
     padding: 0px 5px;
     border-radius: 3px;
-}
-
-#whiskermenu-button label {
-    font-weight: bold;
-    font-style: italic;
 }
