--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -10,8 +10,14 @@
 /* Launchers */
 @import url("./launchers.css");
 
+/* Workspace */
+/* @import url("./wnck-pager.css"); */
+
 /* Notification */
 @import url("./notification.css");
+
+/* System tray */
+@import url("./sn-button.css");
 
 /* Pulseaudio */
 @import url("./pulseaudio.css");
