--- a/gtk-3.0/whisker_menu.css
+++ b/gtk-3.0/whisker_menu.css
@@ -1,28 +1,163 @@
-#whiskermenu-window {
-    background-color: rgb(47, 47, 47);
+/* Whisker menu and application menu buttons */
+
+.xfce4-panel #applicationmenu-button label,
+.xfce4-panel #whiskermenu-button label {
+    margin: 3px;
+    -gtk-icon-shadow: 1px 2px black;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 14px;
+    text-shadow: 1px 2px 2px black;
     color: white;
 }
 
-#whiskermenu-window > frame > border {
-    border-radius: 0px;
-    border-color: rgb(47, 47, 47);
+.xfce4-panel #applicationmenu-button,
+.xfce4-panel #whiskermenu-button {
+    -gtk-icon-shadow: 0px 2px 2px black;
+    background-image: linear-gradient(to bottom,
+                      #ffd9c1,
+                      #FFB180,
+                      #FFAC78,
+                      #FFA872,
+                      #FFA369,
+                      #FF9C5F,
+                      #FF9654,
+                      #FD904D,
+                      #F88B48,
+                      #F38643,
+                      #EE813E,
+                      #E97C39,
+                      #E47734,
+                      #E07330,
+                      #B74A07,
+                      #B34603,
+                      #B54805,
+                      #B94C09,
+                      #BC4F0C,
+                      #BF520F,
+                      #C25512,
+                      #C65916,
+                      #CA5D1A,
+                      #CE611E,
+                      #D26522,
+                      #D56825);
+    margin: -8px 0px;
+    padding: 0px 12px 0px 6px;
+    border-width: 0px;
+    border-radius: 0px 25px 25px 0px;
+    box-shadow: inset 1px 1px 2px black;
+}
+
+.xfce4-panel #applicationmenu-button:hover,
+.xfce4-panel #whiskermenu-button:hover {
+    -gtk-icon-effect: none;
+    background-image: linear-gradient(to bottom,
+                      #FFDAC3,
+                      #FFB486,
+                      #FFB286,
+                      #FFAF81,
+                      #FFAA79,
+                      #FFA472,
+                      #FF9F6A,
+                      #FD965D,
+                      #F89259,
+                      #F38D55,
+                      #EF8D5B,
+                      #EA8958,
+                      #E68556,
+                      #E28154,
+                      #BC6346,
+                      #B96046,
+                      #BC674E,
+                      #BE684E,
+                      #BF694E,
+                      #C16647,
+                      #C46848,
+                      #C66A48,
+                      #CA6D49,
+                      #CE704B,
+                      #D1734C,
+                      #D5764D,
+                      #D8794F);
+}
+
+.xfce4-panel #applicationmenu-button:checked,
+.xfce4-panel #whiskermenu-button:checked {
+        background-image: linear-gradient(to bottom,
+                          #FFDAC3,
+                          #FFB486,
+                          #FFB286,
+                          #FFAF81,
+                          #FFAA79,
+                          #FFA472,
+                          #FF9F6A,
+                          #FD965D,
+                          #F89259,
+                          #F38D55,
+                          #EF8D5B,
+                          #EA8958,
+                          #E68556,
+                          #E28154,
+                          #BC6346,
+                          #B96046,
+                          #BC674E,
+                          #BE684E,
+                          #BF694E,
+                          #C16647,
+                          #C46848,
+                          #C66A48,
+                          #CA6D49,
+                          #CE704B,
+                          #D1734C,
+                          #D5764D,
+                          #D8794F);
+}
+
+#whiskermenu-window {
+    background: #2f2f2f;
+    border-radius: 10px 10px 0px 0px;
+}
+
+#whiskermenu-window scrollbar {
+    background: transparent;
+}
+
+#whiskermenu-window frame {
+    color: white;
+}
+
+#whiskermenu-window frame border {
+    border: none;
+}
+
+#whiskermenu-window treeview {
+    outline-color: white;
+    outline-style: solid;
+    background-color: #666;
+    color: white;
+}
+
+#whiskermenu-window treeview:hover {
+    background-color: rgb(190, 190, 190);
+    color: black;
 }
 
 #whiskermenu-window entry {
     border-width: 2px;
     border-radius: 1px;
-    border-color: rgb(102, 102, 102);
+    border-color: #666;
     box-shadow: none;
 }
 
 #whiskermenu-window button {
-    -gtk-icon-shadow: 0px 0px red;
+    -gtk-icon-shadow: none;
     -gtk-icon-effect: none;
     outline-color: white;
     outline-style: solid;
     transition: none;
     margin: 2px;
-    background-color: rgb(47,47,47);
+    border-radius: 0px;
+    background-color: #2f2f2f;
     box-shadow: none;
     color: white;
 }
@@ -35,49 +170,17 @@
 #whiskermenu-window button:hover:checked,
 #whiskermenu-window button:active,
 #whiskermenu-window button:checked {
-    outline-color: rgb(47,47,47);
+    outline-color: #2f2f2f;
     outline-style: solid;
-    background: rgba(179, 179, 179, 1.00);
-    color: rgb(47,47,47);
+    background: rgb(190, 190, 190);
+    color: #000;
 }
 
-#whiskermenu-window treeview {
-    outline-color: white;
-    outline-style: solid;
-    background-color: rgb(102, 102, 102);
-    color: white;
+#whiskermenu-window scrolledwindow {
+    border: none;
 }
 
-#whiskermenu-window treeview:hover {
-    background-color: rgba(255, 255, 255, 0.50);
-    color: white;
-}
 
-.xfce4-panel #whiskermenu-button label {
-    -gtk-icon-shadow: 1px 2px black;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 14px;
-    text-shadow: 1px 2px 2px black;
-    color: white;
-}
 
-.xfce4-panel #whiskermenu-button {
-    -gtk-icon-shadow: 0px 2px 2px black;
-    background: rgba(255, 161, 71, 0.50);
-    margin: -8px 0px;
-    padding: 0px 12px 0px 6px;
-    border-width: 0px;
-    border-radius: 0px 20px 20px 0px;
-    box-shadow: inset 1px 1px 2px black;
-}
 
-.xfce4-panel #whiskermenu-button:hover {
-    -gtk-icon-effect: none;
-}
-
-.xfce4-panel #whiskermenu-button:checked {
-    box-shadow: inset 1px 1px 2px black;
-    background: rgba(255, 110, 22, 0.40);
-}
 
