gtk: XFCE panel tasklist fixes
Style of window menu and its submenus opened from the tasklist now shows correct colors

--- a/gtk-3.0/tasklist.css
+++ b/gtk-3.0/tasklist.css
@@ -1,3 +1,19 @@
+.xfce4-panel .tasklist .toggle menu menuitem label {
+    color: #241f31;
+}
+
+.xfce4-panel .tasklist .toggle menu menuitem:hover label {
+    color: #fff;
+}
+
+.xfce4-panel .tasklist .toggle menuitem:hover menuitem label {
+    color: #241f31;
+}
+
+.xfce4-panel .tasklist .toggle menuitem:hover menuitem:hover label {
+    color: #fff;
+}
+
 .xfce4-panel .tasklist .toggle label {
     text-shadow: none;
     color: white;
