Moved special panel modification to its own folder

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,26 +1,1 @@
-/* Panel */
-@import url("./panel.css");
-
-/* Tasklist */
-@import url("./tasklist.css");
-
-/* Whisker menu */
-@import url("./whisker_menu.css");
-
-/* Launchers */
-@import url("./launchers.css");
-
-/* Workspace */
-/* @import url("./wnck-pager.css"); */
-
-/* Notification */
-@import url("./notification.css");
-
-/* System tray */
-@import url("./sn-button.css");
-
-/* Pulseaudio */
-@import url("./pulseaudio.css");
-
-/* Clock */
-@import url("./clock.css");
+@import url("./Panel Themes/Zune/zune.css");
